# ardy

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.MD  MANIFEST.in  README.md  pyproject.toml  setup.py
MotionCorrection/: CMakeLists.txt
MotionCorrection/python/motion_correction/: __init__.py
MotionCorrection/src/cpp/Math/: SIMD.h
ardy/: __init__.py  constraints.py  geometry.py  postprocess.py  tools.py
ardy/assets/skeletons/cskel29/: joints.p  standard_t_pose_cskel29_joint_quat.p
ardy/assets/skeletons/somaskel77/: standard_t_pose_somaskel77_joint_quat.p
ardy/data_processing/: bvh.py  skeleton.py
ardy/exports/: __init__.py  mujoco.py
ardy/model/: __init__.py  ardy_model.py  auto_latent_twostage_denoiser.py  backbone.py  cfg.py  diffusion.py  latent_utils.py  load_model.py  loading.py  memory_manager.py  registry.py  text_encoder_api.py  trt.py
ardy/model/autoencoder/: __init__.py  fsq.py  transformer.py
ardy/model/llm2vec/: __init__.py  llm2vec.py  llm2vec_wrapper.py
ardy/model/llm2vec/models/: __init__.py  attn_mask_utils.py  bidirectional_llama.py  utils.py
ardy/motion_rep/: __init__.py  feet.py  smooth_root.py  stats.py  tools.py
ardy/motion_rep/reps/: __init__.py  ardy_motionrep.py  base.py
ardy/skeleton/: __init__.py  base.py  bvh.py  definitions.py  kinematics.py  registry.py  transforms.py
ardy/viz/: __init__.py  core_skin.py  g1_rig.py  soma_skin.py  viser_utils.py
scripts/: export_onnx.py  generate.py  run_demo.py  run_text_encoder_server.py  visualize.py
scripts/interactive_demo/: camera.py  characters.py  client.py  common.py  constraints.py  embedding_cache.py  gen_constraints.py  generation.py  loading.py  motion_io.py  playback.py  session_io.py  window_budget.py
scripts/interactive_demo/gui/: __init__.py  generate.py  instructions.py  io.py  model.py  orchestrator.py  playback.py  text.py  visualize.py
